--- a/book/week3.ipynb
+++ b/book/week3.ipynb
@@ -918,7 +918,22 @@
     "\n",
     "Detect vibrations directly from solid surfaces rather than air.\n",
     "Often use piezoelectric materials to convert vibrations into electrical signals.\n",
-    "Commonly used for instruments like violins or guitars."
+    "Commonly used for instruments like violins or guitars.\n",
+    "\n",
+    "Microphones\n",
+    "\n",
+    "- **Types**:\n",
+    "  - [Dynamic microphones](https://en.wikipedia.org/wiki/Microphone#Dynamic_microphones).\n",
+    "  - [Condenser microphones](https://en.wikipedia.org/wiki/Microphone#Condenser_microphones).\n",
+    "- **Applications**:\n",
+    "  - Recording environmental sounds.\n",
+    "  - Enhancing listening practices.\n",
+    "\n",
+    "\n",
+    "## Microphones\n",
+    "\n",
+    "- Microphones and listening - Krause 2016\n",
+    "- softhearers vs loudspeakers\n"
    ]
   },
   {
