--- a/book/week4.ipynb
+++ b/book/week4.ipynb
@@ -7,7 +7,15 @@
    "source": [
     "# Week 4: Psychoacoustics\n",
     "\n",
-    "This week we will explore the field of *[psychoacoustics](https://en.wikipedia.org/wiki/Psychoacoustics)*, the study of how humans perceive and interpret sound, bridging the gap between physical sound properties and subjective auditory experiences. This will form the foundation for more detailed investigations of \"vertical\" and \"horizontal\" sound perception in the coming weeks. \n",
+    "This week we will explore the field of *[psychoacoustics](https://en.wikipedia.org/wiki/Psychoacoustics)*, the study of how humans perceive and interpret sound, bridging the gap between physical sound properties and subjective auditory experiences. This will form the foundation for more detailed investigations of \"vertical\" and \"horizontal\" sound perception in the coming weeks.\n",
+    "\n",
+    "## Introduction to Psychoacoustics\n",
+    "\n",
+    "Psychoacoustics is a branch of science that examines the psychological and physiological responses associated with sound, including how we detect, differentiate, and interpret auditory stimuli. It seeks to answer questions such as: Why do some sounds seem louder than others, even if they have the same physical intensity? How do we distinguish between different musical instruments playing the same note? What makes certain sounds pleasant or unpleasant?\n",
+    "\n",
+    "Psychoacoustics explores the relationship between the measurable, physical properties of sound (such as frequency, amplitude, and harmonic relationships) and the way these sounds are perceived by the human ear and brain (such as pitch, loudness, and timbre). Insights from psychoacoustics are applied in audio engineering, music production, hearing aid design, and the development of audio codecs (such as MP3), which exploit perceptual limitations to compress audio data efficiently.\n",
+    "\n",
+    "The roots of psychoacoustics can be traced back to the 19th century, with foundational work by scientists such as [Hermann von Helmholtz](https://en.wikipedia.org/wiki/Hermann_von_Helmholtz) (1821–1894), who investigated the sensations of tone and the physical basis of music. Later, [S. S. Stevens](https://en.wikipedia.org/wiki/Stanley_Smith_Stevens)  (1906–1973) contributed to the development of psychophysical scaling, introducing methods to quantify the relationship between stimulus and perception (e.g., the Stevens' Power Law for loudness perception). Over time, psychoacoustics has evolved into a multidisciplinary field, integrating insights from physics, psychology, neuroscience, and engineering.\n",
     "\n",
     "## Anatomy of the Ear\n",
     "\n",
@@ -63,6 +71,7 @@
     "    E --> F[Brain]\n",
     "    F --> F1[Auditory Cortex (Sound Processing)] \n",
     "```\n",
+    "In comparison, capturing digital sound uses this signal chain: \n",
     "\n",
     "```mermaid\n",
     "graph TD\n",
@@ -79,29 +88,19 @@
    "id": "3d00f72e",
    "metadata": {},
    "source": [
+    "## Basic principles of sound perception\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Psychoacoustics: A Detailed Breakdown\n",
-    "\n",
-    "### Sensation\n",
-    "\n",
-    "\n",
-    "### Perception\n",
-    "\n",
-    "#### Frequency\n",
+    "### Frequency\n",
     "- **Infrasound**: Below 20 Hz. [Learn more](https://en.wikipedia.org/wiki/Infrasound)\n",
     "- **Audible Sound**: 20 Hz to 20,000 Hz. [Learn more](https://en.wikipedia.org/wiki/Hearing_range)\n",
     "- **Ultrasound**: Above 20,000 Hz. [Learn more](https://en.wikipedia.org/wiki/Ultrasound)\n",
     "\n",
-    "##### Instruments\n",
+    "### Instruments\n",
     "- **Piano**: 32 Hz to 4186 Hz. [Learn more](https://en.wikipedia.org/wiki/Piano)\n",
     "- **Saxophone**: Known for its rich tone. [Learn more](https://en.wikipedia.org/wiki/Saxophone)\n",
     "- **Just Noticeable Differences (JND)**: The smallest detectable frequency change. [Learn more](https://en.wikipedia.org/wiki/Just-noticeable_difference)\n",
     "\n",
-    "#### Loudness\n",
+    "## Loudness\n",
     "- **Equal-Loudness Contours**: Show how loudness perception varies. [Learn more](https://en.wikipedia.org/wiki/Equal-loudness_contour)\n",
     "\n",
     "The Fletcher-Munson curves, also known as equal-loudness contours, illustrate how human hearing sensitivity varies with frequency and loudness levels.\n",
@@ -132,17 +131,18 @@
     "#### Space\n",
     "- **Spatial Hearing**: Localizing sound sources. [Learn more](https://en.wikipedia.org/wiki/Sound_localization)\n",
     "\n",
-    "### Cognition\n",
-    "\n",
-    "#### The Brain\n",
-    "Processes auditory information via the cerebral cortex. [Learn more](https://en.wikipedia.org/wiki/Cerebral_cortex)\n",
-    "\n",
-    "#### Auditory Cortex\n",
-    "Responsible for sound processing. [Learn more](https://en.wikipedia.org/wiki/Auditory_cortex)\n",
     "\n",
     "### Filtering\n",
     "\n",
-    "**Exercise:** Have you tried swapping the phase in a music track? Try [this phase cancellation](https://l2ork.music.vt.edu:3000/?url=VTWaves/Phase-Cancellation-Emscripten.pd) web experiment. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3e395af",
+   "metadata": {},
+   "source": [
+    "## Psychoacoustics in technology\n",
     "\n",
     "### Audio Visualizations\n",
     "\n",
@@ -173,21 +173,7 @@
     "A Note Graph is a graph-based representation of musical scores, where nodes represent notes and edges capture relationships such as sequence, onset, and sustain. This approach provides a structured way to analyze and model complex musical relationships. [Learn more](https://arxiv.org/abs/2006.05417)\n",
     "\n",
     "- **[Ideas Roadshow: Believing Your Ears - Auditory Illusions](https://ideasroadshow.com/items/believing-your-ears-auditory-illusions)**  \n",
-    "    *Diana Deutsch in conversation with Howard Burton* (2015), Open Agenda Publishing.\n",
-    "\n",
-    "## Tools\n",
-    "\n",
-    "- **PaulXStretcher**\n",
-    "- **SonicVisualiser**\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Citations\n",
-    "\n",
-    "Use the following syntax for citations: `` {cite}`holdgraf_evidence_2014` ``.\n",
-    "\n",
-    "```{bibliography}\n",
-    "```"
+    "    *Diana Deutsch in conversation with Howard Burton* (2015), Open Agenda Publishing.\n"
    ]
   },
   {
