--- a/book/week4.ipynb
+++ b/book/week4.ipynb
@@ -90,17 +90,9 @@
    "source": [
     "## Basic principles of sound perception\n",
     "\n",
-    "### Frequency\n",
-    "- **Infrasound**: Below 20 Hz. [Learn more](https://en.wikipedia.org/wiki/Infrasound)\n",
-    "- **Audible Sound**: 20 Hz to 20,000 Hz. [Learn more](https://en.wikipedia.org/wiki/Hearing_range)\n",
-    "- **Ultrasound**: Above 20,000 Hz. [Learn more](https://en.wikipedia.org/wiki/Ultrasound)\n",
+    "### Loudness\n",
     "\n",
-    "### Instruments\n",
-    "- **Piano**: 32 Hz to 4186 Hz. [Learn more](https://en.wikipedia.org/wiki/Piano)\n",
-    "- **Saxophone**: Known for its rich tone. [Learn more](https://en.wikipedia.org/wiki/Saxophone)\n",
-    "- **Just Noticeable Differences (JND)**: The smallest detectable frequency change. [Learn more](https://en.wikipedia.org/wiki/Just-noticeable_difference)\n",
     "\n",
-    "## Loudness\n",
     "- **Equal-Loudness Contours**: Show how loudness perception varies. [Learn more](https://en.wikipedia.org/wiki/Equal-loudness_contour)\n",
     "\n",
     "The Fletcher-Munson curves, also known as equal-loudness contours, illustrate how human hearing sensitivity varies with frequency and loudness levels.\n",
@@ -128,13 +120,28 @@
     "![Audio Masking Graph](https://upload.wikimedia.org/wikipedia/commons/e/eb/Audio_Mask_Graph.png)\n",
     "*Image Source: [Wikipedia - Audio Masking](https://en.wikipedia.org/wiki/Masking_(audio))*\n",
     "\n",
-    "#### Space\n",
-    "- **Spatial Hearing**: Localizing sound sources. [Learn more](https://en.wikipedia.org/wiki/Sound_localization)\n",
     "\n",
+    "### Frequency\n",
+    "- **Infrasound**: Below 20 Hz. [Learn more](https://en.wikipedia.org/wiki/Infrasound)\n",
+    "- **Audible Sound**: 20 Hz to 20,000 Hz. [Learn more](https://en.wikipedia.org/wiki/Hearing_range)\n",
+    "- **Ultrasound**: Above 20,000 Hz. [Learn more](https://en.wikipedia.org/wiki/Ultrasound)\n",
     "\n",
-    "### Filtering\n",
+    "### Instruments\n",
+    "- **Piano**: 32 Hz to 4186 Hz. [Learn more](https://en.wikipedia.org/wiki/Piano)\n",
+    "- **Saxophone**: Known for its rich tone. [Learn more](https://en.wikipedia.org/wiki/Saxophone)\n",
+    "- **Just Noticeable Differences (JND)**: The smallest detectable frequency change. [Learn more](https://en.wikipedia.org/wiki/Just-noticeable_difference)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a7d0cce",
+   "metadata": {},
+   "source": [
+    "## Spatial perception\n",
+    "\n",
+    "- **Spatial Hearing**: Localizing sound sources. [Learn more](https://en.wikipedia.org/wiki/Sound_localization)\n"
    ]
   },
   {
