--- a/book/week4.ipynb
+++ b/book/week4.ipynb
@@ -92,12 +92,19 @@
     "\n",
     "### Loudness\n",
     "\n",
-    "- **Equal-Loudness Contours**: Show how loudness perception varies. [Learn more](https://en.wikipedia.org/wiki/Equal-loudness_contour)\n",
+    "As we discussed last week, there is not a direct relationship between [sound pressure level (SPL)](https://en.wikipedia.org/wiki/Sound_pressure#Sound_pressure_level) and [loudness](https://en.wikipedia.org/wiki/Loudness). SPL is a physical measurement of the amplitude of a sound wave, typically expressed in decibels (dB), while loudness is a subjective perception—how loud a sound seems to a human listener. Although they are related, the same SPL can be perceived as different loudness depending on the frequency of the sound and the listener's hearing sensitivity.\n",
     "\n",
-    "The Fletcher-Munson curves, also known as equal-loudness contours, illustrate how human hearing sensitivity varies with frequency and loudness levels.\n",
+    "This relationship was first systematically studied by Harvey Fletcher and Wilden A. Munson in the 1930s. Their experiments led to the creation of the *Fletcher-Munson curves*, also known as *[equal-loudness contours](https://en.wikipedia.org/wiki/Equal-loudness_contour)*. These curves show that the human ear is not equally sensitive to all frequencies: we are most sensitive to frequencies between roughly 2,000 and 5,000 Hz, and less sensitive to very low or very high frequencies. As a result, a low-frequency sound must be played at a higher SPL than a mid-frequency sound to be perceived as equally loud.\n",
     "\n",
-    "![Fletcher-Munson Curves](https://upload.wikimedia.org/wikipedia/commons/4/4c/Lindos1.svg)\n",
+    "![Equal-loudness contour](https://upload.wikimedia.org/wikipedia/commons/4/47/Lindos1.svg)\n",
     "*Image Source: [Wikipedia - Equal-loudness contour](https://en.wikipedia.org/wiki/Equal-loudness_contour)*\n",
+    "\n",
+    "Equal-loudness contours are crucial in audio engineering, music production, and hearing science. They explain why music or speech can sound different at low versus high volumes, and why audio equipment often includes \"loudness\" compensation to adjust for these perceptual differences. Understanding these contours helps us design better audio systems and create more accurate sound reproductions that align with human hearing.\n",
+    "\n",
+    "```{exercise}Sine tone loudness\n",
+    "Try to play a sine tone with different frequencies, for example, 100, 500, 1000, 3000, 5000 ,10,000 Hz. What do you notice in terms of how loud it sounds like? \n",
+    "```\n",
+    "\n",
     "\n",
     "- **Threshold of Hearing**: Quietest perceivable sound. [Learn more](https://en.wikipedia.org/wiki/Absolute_threshold_of_hearing)\n",
     "\n",
@@ -131,6 +138,24 @@
     "- **Just Noticeable Differences (JND)**: The smallest detectable frequency change. [Learn more](https://en.wikipedia.org/wiki/Just-noticeable_difference)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bb8220d",
+   "metadata": {},
+   "source": [
+    "## Auditory illusions\n",
+    "\n",
+    "    Masking effects: Simultaneous and temporal masking.\n",
+    "    Critical bands and frequency resolution.\n",
+    "    Auditory illusions: Shepard tones, missing fundamental, binaural beats.\n",
+    "\n",
+    "Activities:\n",
+    "\n",
+    "    Listening tests: Compare sine waves, complex tones, and illusions.\n",
+    "    Small experiments: Measure threshold of hearing or masking using software (e.g., Pure Data, Audacity).\n",
+    "    Discussion: How psychoacoustics informs music production and hearing aids.\n"
    ]
   },
   {
