--- a/book/week4.ipynb
+++ b/book/week4.ipynb
@@ -88,16 +88,18 @@
    "id": "3d00f72e",
    "metadata": {},
    "source": [
-    "## Basic principles of sound perception\n",
+    "## Loudness\n",
     "\n",
-    "### Loudness\n",
+    "### Equal Loudness Contours\n",
     "\n",
-    "As we discussed last week, there is not a direct relationship between [sound pressure level (SPL)](https://en.wikipedia.org/wiki/Sound_pressure#Sound_pressure_level) and [loudness](https://en.wikipedia.org/wiki/Loudness). SPL is a physical measurement of the amplitude of a sound wave, typically expressed in decibels (dB), while loudness is a subjective perception—how loud a sound seems to a human listener. Although they are related, the same SPL can be perceived as different loudness depending on the frequency of the sound and the listener's hearing sensitivity.\n",
+    "As we discussed last week, there is not a direct relationship between [sound pressure level (SPL)](https://en.wikipedia.org/wiki/Sound_pressure#Sound_pressure_level) and [loudness](https://en.wikipedia.org/wiki/Loudness). SPL is a physical measurement of the amplitude of a sound wave, typically expressed in decibels (dB), while loudness is a subjective perception; how loud a sound seems to a human listener. Although they are related, the same SPL can be perceived as having a different loudness depending on the frequency of the sound and the listener's hearing sensitivity.\n",
     "\n",
     "This relationship was first systematically studied by Harvey Fletcher and Wilden A. Munson in the 1930s. Their experiments led to the creation of the *Fletcher-Munson curves*, also known as *[equal-loudness contours](https://en.wikipedia.org/wiki/Equal-loudness_contour)*. These curves show that the human ear is not equally sensitive to all frequencies: we are most sensitive to frequencies between roughly 2,000 and 5,000 Hz, and less sensitive to very low or very high frequencies. As a result, a low-frequency sound must be played at a higher SPL than a mid-frequency sound to be perceived as equally loud.\n",
     "\n",
     "![Equal-loudness contour](https://upload.wikimedia.org/wikipedia/commons/4/47/Lindos1.svg)\n",
     "*Image Source: [Wikipedia - Equal-loudness contour](https://en.wikipedia.org/wiki/Equal-loudness_contour)*\n",
+    "\n",
+    "There is evidence suggesting that our heightened sensitivity to frequencies between 2,000 and 5,000 Hz has evolutionary roots. This frequency range corresponds closely to the spectral content of human speech, particularly the consonant sounds that are crucial for understanding language. Being able to detect subtle differences in these frequencies would have provided a survival advantage by improving communication, social bonding, and the ability to detect important environmental sounds such as a baby's cry or warning calls. Over time, natural selection may have favored individuals whose hearing was optimized for these frequencies, shaping the contours of human auditory perception.\n",
     "\n",
     "Equal-loudness contours are crucial in audio engineering, music production, and hearing science. They explain why music or speech can sound different at low versus high volumes, and why audio equipment often includes \"loudness\" compensation to adjust for these perceptual differences. Understanding these contours helps us design better audio systems and create more accurate sound reproductions that align with human hearing.\n",
     "\n",
@@ -105,13 +107,15 @@
     "Try to play a sine tone with different frequencies, for example, 100, 500, 1000, 3000, 5000 ,10,000 Hz. What do you notice in terms of how loud it sounds like? \n",
     "```\n",
     "\n",
+    "### Threshold of hearing\n",
+    "\n",
     "\n",
     "- **Threshold of Hearing**: Quietest perceivable sound. [Learn more](https://en.wikipedia.org/wiki/Absolute_threshold_of_hearing)\n",
     "\n",
     "![Threshold of Hearing](https://upload.wikimedia.org/wikipedia/commons/d/da/Average_click-evoked_waveforms_and_Average_hearing_thresholds_for_younger_and_older_adults.jpg)\n",
     "*Image Source: [Wikipedia - Hearing Thresholds](https://en.wikipedia.org/wiki/Absolute_threshold_of_hearing)*\n",
     "\n",
-    "#### Hysteresis\n",
+    "### Hysteresis\n",
     "Hysteresis refers to the phenomenon where the response of a system depends not only on its current state but also on its past states. In psychoacoustics, this can manifest in auditory perception, where the perception of a sound may be influenced by previously heard sounds or stimuli. This concept is crucial in understanding how the auditory system adapts and reacts over time to varying acoustic environments.\n",
     "\n",
     "![Hysteresis](https://upload.wikimedia.org/wikipedia/en/e/e2/Hysteresis.png)\n",
@@ -119,13 +123,34 @@
     "\n",
     "- **Threshold of Pain**: Sounds above 120 dB. [Learn more](https://en.wikipedia.org/wiki/Sound_pressure)\n",
     "\n",
-    "#### Time\n",
+    "## Masking\n",
+    "\n",
+    "\n",
     "- **Critical Bands**: Frequency ranges where masking occurs. [Learn more](https://en.wikipedia.org/wiki/Critical_band)\n",
     "- **Temporal Masking**: One sound obscures another. [Learn more](https://en.wikipedia.org/wiki/Masking_(audio))\n",
     "\n",
     "![Audio Masking Graph](https://upload.wikimedia.org/wikipedia/commons/e/eb/Audio_Mask_Graph.png)\n",
     "*Image Source: [Wikipedia - Audio Masking](https://en.wikipedia.org/wiki/Masking_(audio))*\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97018d5e",
+   "metadata": {},
+   "source": [
+    "## Pitch\n",
     "\n",
+    "Pitch is the perceptual attribute that allows us to order sounds on a scale from low to high. While pitch is closely related to the physical property of frequency (the rate at which a sound wave vibrates), it is ultimately a subjective experience shaped by the human auditory system.\n",
+    "\n",
+    "### Psychoacoustics of Pitch Perception\n",
+    "\n",
+    "- **Frequency and Pitch**: Generally, higher frequencies are perceived as higher pitches and lower frequencies as lower pitches. However, the relationship is not strictly linear—our perception of pitch compresses at very high and very low frequencies.\n",
+    "- **Pitch Discrimination**: The human ear is remarkably sensitive to small changes in frequency, especially in the mid-frequency range (around 500–4000 Hz). The smallest detectable difference in pitch is called the *just noticeable difference* (JND), which can be as little as 0.3% of the frequency for trained listeners.\n",
+    "- **Missing Fundamental**: Even if the fundamental frequency of a complex tone is absent, the ear can infer its pitch from the pattern of overtones (harmonics). This phenomenon is known as the *missing fundamental* or *virtual pitch* effect.\n",
+    "- **Pitch of Complex Tones**: Most musical sounds are complex, containing multiple harmonics. The perceived pitch usually corresponds to the fundamental frequency, but the presence and strength of overtones can influence timbre and pitch clarity.\n",
+    "- **Pitch and Loudness**: Perceived pitch can shift slightly with changes in loudness, especially at very high or low frequencies.\n",
+    "- **Cultural and Musical Context**: Musical training and cultural background can affect pitch perception, such as the ability to recognize microtones or perceive pitch in non-Western musical scales.\n",
     "\n",
     "### Frequency\n",
     "- **Infrasound**: Below 20 Hz. [Learn more](https://en.wikipedia.org/wiki/Infrasound)\n",
@@ -137,7 +162,10 @@
     "- **Saxophone**: Known for its rich tone. [Learn more](https://en.wikipedia.org/wiki/Saxophone)\n",
     "- **Just Noticeable Differences (JND)**: The smallest detectable frequency change. [Learn more](https://en.wikipedia.org/wiki/Just-noticeable_difference)\n",
     "\n",
-    "\n"
+    "#### Further Reading\n",
+    "- [Pitch perception (Wikipedia)](https://en.wikipedia.org/wiki/Pitch_(music))\n",
+    "- [Missing fundamental (Wikipedia)](https://en.wikipedia.org/wiki/Missing_fundamental)\n",
+    "- [Psychoacoustics (Wikipedia)](https://en.wikipedia.org/wiki/Psychoacoustics)\n"
    ]
   },
   {
@@ -181,8 +209,82 @@
     "- **Spectrogram**: Displays frequency content over time. [Learn more](https://en.wikipedia.org/wiki/Spectrogram)\n",
     "- **Log Mel Spectrogram**: Mimics human hearing by applying the Short-Time Fourier Transform (STFT), Mel band-pass filters, and a logarithmic transformation to represent audio on a decibel scale. Widely used in audio-related tasks for its perceptual relevance. [Learn more](https://en.wikipedia.org/wiki/Mel-frequency_cepstrum)\n",
     "- **MFCCs (Mel-Frequency Cepstral Coefficients)**: Extracts and compresses audio features by applying the Discrete Cosine Transform (DCT) to the Log Mel spectrum. Commonly used in speech processing, music classification, and music information retrieval. [Learn more](https://en.wikipedia.org/wiki/Mel-frequency_cepstrum)\n",
-    "- **CQT (Constant-Q Transform)**: Uses a logarithmic frequency scale with exponentially spaced center frequencies and varying filter bandwidths. Ideal for musical note frequency extraction and analysis. [Learn more](https://en.wikipedia.org/wiki/Constant-Q_transform)\n",
+    "- **CQT (Constant-Q Transform)**: Uses a logarithmic frequency scale with exponentially spaced center frequencies and varying filter bandwidths. Ideal for musical note frequency extraction and analysis. [Learn more](https://en.wikipedia.org/wiki/Constant-Q_transform)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6fc5d135",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'numpy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlibrosa\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mnumpy\u001b[49m.__version__)\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlibrosa\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdisplay\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'numpy' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import librosa\n",
+    "print(numpy.__version__)\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import librosa.display\n",
+    "\n",
+    "# Generate a test audio signal (sine wave + harmonics)\n",
+    "sr = 22050  # sample rate\n",
+    "duration = 2.0  # seconds\n",
+    "t = np.linspace(0, duration, int(sr * duration), endpoint=False)\n",
+    "audio = 0.5 * np.sin(2 * np.pi * 220 * t) + 0.3 * np.sin(2 * np.pi * 440 * t) + 0.2 * np.sin(2 * np.pi * 880 * t)\n",
+    "\n",
+    "fig, axs = plt.subplots(3, 2, figsize=(14, 12))\n",
+    "fig.suptitle('Audio Representations', fontsize=16)\n",
+    "\n",
+    "# Waveform\n",
+    "librosa.display.waveshow(audio, sr=sr, ax=axs[0, 0])\n",
+    "axs[0, 0].set_title('Waveform')\n",
+    "axs[0, 0].set_xlabel('')\n",
+    "axs[0, 0].set_ylabel('Amplitude')\n",
+    "\n",
+    "# Spectrogram\n",
+    "S = np.abs(librosa.stft(audio, n_fft=1024, hop_length=256))\n",
+    "librosa.display.specshow(librosa.amplitude_to_db(S, ref=np.max), sr=sr, hop_length=256, x_axis='time', y_axis='hz', ax=axs[0, 1])\n",
+    "axs[0, 1].set_title('Spectrogram (dB)')\n",
+    "\n",
+    "# Mel Spectrogram\n",
+    "S_mel = librosa.feature.melspectrogram(y=audio, sr=sr, n_fft=1024, hop_length=256, n_mels=64)\n",
+    "librosa.display.specshow(librosa.power_to_db(S_mel, ref=np.max), sr=sr, hop_length=256, x_axis='time', y_axis='mel', ax=axs[1, 0])\n",
+    "axs[1, 0].set_title('Mel Spectrogram (dB)')\n",
+    "\n",
+    "# MFCC\n",
+    "mfccs = librosa.feature.mfcc(y=audio, sr=sr, n_mfcc=13, n_fft=1024, hop_length=256)\n",
+    "librosa.display.specshow(mfccs, x_axis='time', ax=axs[1, 1])\n",
+    "axs[1, 1].set_title('MFCC')\n",
+    "\n",
+    "# CQT\n",
+    "C = np.abs(librosa.cqt(audio, sr=sr, hop_length=256, n_bins=60))\n",
+    "librosa.display.specshow(librosa.amplitude_to_db(C, ref=np.max), sr=sr, hop_length=256, x_axis='time', y_axis='cqt_note', ax=axs[2, 0])\n",
+    "axs[2, 0].set_title('CQT (dB)')\n",
+    "\n",
+    "# Hide the last empty subplot\n",
+    "axs[2, 1].axis('off')\n",
+    "\n",
+    "plt.tight_layout(rect=[0, 0, 1, 0.97])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bfadbfe",
+   "metadata": {},
+   "source": [
     "### Symbolic Representations\n",
     "\n",
     "#### MIDI\n",
@@ -206,17 +308,25 @@
     "- **[Ideas Roadshow: Believing Your Ears - Auditory Illusions](https://ideasroadshow.com/items/believing-your-ears-auditory-illusions)**  \n",
     "    *Diana Deutsch in conversation with Howard Burton* (2015), Open Agenda Publishing.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0062bd73",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
