--- a/book/week4.ipynb
+++ b/book/week4.ipynb
@@ -90,6 +90,31 @@
    "source": [
     "## Loudness\n",
     "\n",
+    "### Threshold of hearing\n",
+    "\n",
+    "The *[threshold of hearing](https://en.wikipedia.org/wiki/Absolute_threshold_of_hearing)* is the quietest sound that the average human ear can detect in a silent environment. This threshold is typically defined as 0 decibels (dB SPL) at 1,000 Hz for a healthy young adult, but it varies with frequency and individual hearing ability. At very low or very high frequencies, sounds must be much louder to be heard.\n",
+    "\n",
+    "The threshold of hearing is not a fixed value; it can be affected by age, exposure to loud noises, and even temporary conditions like ear infections or fatigue. As people age, their sensitivity to high frequencies usually decreases, raising the threshold at those frequencies.\n",
+    "\n",
+    "The graph below illustrates the average hearing thresholds for different frequencies and age groups, showing how sensitivity changes across the audible spectrum.\n",
+    "\n",
+    "![Threshold of Hearing](https://upload.wikimedia.org/wikipedia/commons/d/da/Average_click-evoked_waveforms_and_Average_hearing_thresholds_for_younger_and_older_adults.jpg)\n",
+    "*Image Source: [Wikipedia - Hearing Thresholds](https://en.wikipedia.org/wiki/Absolute_threshold_of_hearing)*\n",
+    "\n",
+    "### Safe listening levels\n",
+    "\n",
+    "As a rule of thumb, prolonged exposure to sounds above 85 dB can cause hearing damage. For example, typical conversation is around 60 dB, city traffic can reach 85 dB, and concerts or clubs often exceed 100 dB. The higher the volume, the shorter the safe exposure time. At 100 dB, hearing damage can occur in as little as 15 minutes.\n",
+    "\n",
+    "The World Health Organization (WHO) recommends keeping personal listening devices below 80 dB for adults (75 dB for children) and limiting exposure to loud environments. Using ear protection in noisy settings and taking listening breaks can help preserve hearing health.\n",
+    "\n",
+    "Sounds above 120–130 dB (such as jet engines at close range or fireworks) can cause immediate pain and permanent hearing loss. Even brief exposure to extremely loud sounds can result in irreversible damage to the hair cells in the inner ear.\n",
+    "\n",
+    "```{admonition} Question\n",
+    ":class: question\n",
+    "How do you protect your hearing?\n",
+    "```\n",
+    "\n",
+    "\n",
     "### Equal Loudness Contours\n",
     "\n",
     "As we discussed last week, there is not a direct relationship between [sound pressure level (SPL)](https://en.wikipedia.org/wiki/Sound_pressure#Sound_pressure_level) and [loudness](https://en.wikipedia.org/wiki/Loudness). SPL is a physical measurement of the amplitude of a sound wave, typically expressed in decibels (dB), while loudness is a subjective perception; how loud a sound seems to a human listener. Although they are related, the same SPL can be perceived as having a different loudness depending on the frequency of the sound and the listener's hearing sensitivity.\n",
@@ -107,24 +132,14 @@
     "Try to play a sine tone with different frequencies, for example, 100, 500, 1000, 3000, 5000 ,10,000 Hz. What do you notice in terms of how loud it sounds like? \n",
     "```\n",
     "\n",
-    "### Threshold of hearing\n",
-    "\n",
-    "\n",
-    "- **Threshold of Hearing**: Quietest perceivable sound. [Learn more](https://en.wikipedia.org/wiki/Absolute_threshold_of_hearing)\n",
-    "\n",
-    "![Threshold of Hearing](https://upload.wikimedia.org/wikipedia/commons/d/da/Average_click-evoked_waveforms_and_Average_hearing_thresholds_for_younger_and_older_adults.jpg)\n",
-    "*Image Source: [Wikipedia - Hearing Thresholds](https://en.wikipedia.org/wiki/Absolute_threshold_of_hearing)*\n",
+    "## Masking\n",
     "\n",
     "### Hysteresis\n",
-    "Hysteresis refers to the phenomenon where the response of a system depends not only on its current state but also on its past states. In psychoacoustics, this can manifest in auditory perception, where the perception of a sound may be influenced by previously heard sounds or stimuli. This concept is crucial in understanding how the auditory system adapts and reacts over time to varying acoustic environments.\n",
+    "\n",
+    "*[Hysteresis](https://en.wikipedia.org/wiki/Hysteresis)* refers to the phenomenon where the response of a system depends not only on its current state but also on its past states. In psychoacoustics, hysteresis can be observed in loudness perception: the perceived loudness of a sound may depend on the sequence of sounds that came before it. For example, if a listener is exposed to a loud sound and then to a softer sound, the softer sound may seem even quieter than if it were heard in isolation. Conversely, a gradual increase in volume may be perceived differently than a sudden jump, even if the final sound pressure level is the same. This effect highlights how our auditory system adapts to changing sound environments and why context and listening history can influence how loud a sound seems.\n",
     "\n",
     "![Hysteresis](https://upload.wikimedia.org/wikipedia/en/e/e2/Hysteresis.png)\n",
     "*Image Source: [Wikipedia - Hysteresis](https://en.wikipedia.org/wiki/Hysteresis)*\n",
-    "\n",
-    "- **Threshold of Pain**: Sounds above 120 dB. [Learn more](https://en.wikipedia.org/wiki/Sound_pressure)\n",
-    "\n",
-    "## Masking\n",
-    "\n",
     "\n",
     "- **Critical Bands**: Frequency ranges where masking occurs. [Learn more](https://en.wikipedia.org/wiki/Critical_band)\n",
     "- **Temporal Masking**: One sound obscures another. [Learn more](https://en.wikipedia.org/wiki/Masking_(audio))\n",
