--- a/book/week4.ipynb
+++ b/book/week4.ipynb
@@ -56,25 +56,18 @@
     "Although they are different in many ways, it can be helpful to think about the human auditory system as analogous to an analog-to-digital converter (ADC). Both systems transform analog signals (sound waves) into a format that can be interpreted (heard or processed) by the brain or digital devices.\n",
     "\n",
     "```mermaid\n",
-    "graph TD\n",
-    "    A[Sound Waves] --> B[Outer Ear]\n",
-    "    B --> B1[Pinna]\n",
-    "    B --> B2[Ear Canal]\n",
-    "    B --> C[Middle Ear]\n",
-    "    C --> C1[Eardrum (Tympanic Membrane)]\n",
-    "    C --> C2[Ossicles (Malleus, Incus, Stapes)]\n",
-    "    C --> D[Inner Ear]\n",
-    "    D --> D1[Cochlea]\n",
-    "    D1 --> D2[Hair Cells]\n",
-    "    D1 --> D3[Basilar Membrane]\n",
+    "graph LR\n",
+    "    A[Sound Waves] --> B[Eardrum]\n",
+    "    B --> C[Ossicles]\n",
+    "    C --> D[Cochlea]\n",
     "    D --> E[Auditory Nerve]\n",
-    "    E --> F[Brain]\n",
-    "    F --> F1[Auditory Cortex (Sound Processing)] \n",
+    "    E --> F[Auditory Cortex]\n",
     "```\n",
+    "\n",
     "In comparison, capturing digital sound uses this signal chain: \n",
     "\n",
     "```mermaid\n",
-    "graph TD\n",
+    "graph LR\n",
     "    A[Sound Waves] --> B[Microphone]\n",
     "    B --> C[Pre-Amplifier]\n",
     "    C --> D[Sampling Process]\n",
@@ -129,7 +122,7 @@
     "Equal-loudness contours are crucial in audio engineering, music production, and hearing science. They explain why music or speech can sound different at low versus high volumes, and why audio equipment often includes \"loudness\" compensation to adjust for these perceptual differences. Understanding these contours helps us design better audio systems and create more accurate sound reproductions that align with human hearing.\n",
     "\n",
     "```{exercise}Sine tone loudness\n",
-    "Try to play a sine tone with different frequencies, for example, 100, 500, 1000, 3000, 5000 ,10,000 Hz. What do you notice in terms of how loud it sounds like? \n",
+    "In [Glicol](https://glicol.org/tour#basicconnection), try to play a sine tone with different frequencies, for example, 100, 500, 1000, 3000, 5000, 10,000 Hz. What do you notice in terms of how loud it sounds like? \n",
     "```\n",
     "\n",
     "## Masking\n",
