--- a/book/week4.ipynb
+++ b/book/week4.ipynb
@@ -134,11 +134,14 @@
     "![Hysteresis](https://upload.wikimedia.org/wikipedia/en/e/e2/Hysteresis.png)\n",
     "*Image Source: [Wikipedia - Hysteresis](https://en.wikipedia.org/wiki/Hysteresis)*\n",
     "\n",
-    "- **Critical Bands**: Frequency ranges where masking occurs. [Learn more](https://en.wikipedia.org/wiki/Critical_band)\n",
-    "- **Temporal Masking**: One sound obscures another. [Learn more](https://en.wikipedia.org/wiki/Masking_(audio))\n",
     "\n",
-    "![Audio Masking Graph](https://upload.wikimedia.org/wikipedia/commons/e/eb/Audio_Mask_Graph.png)\n",
-    "*Image Source: [Wikipedia - Audio Masking](https://en.wikipedia.org/wiki/Masking_(audio))*\n",
+    "\n",
+    "### Critical Bands and Frequency Resolution\n",
+    "\n",
+    "The cochlea divides incoming sounds into frequency bands called *critical bands*. Within each band, sounds can interfere with each other, leading to masking effects. The width of a critical band varies with frequency, being narrower at low frequencies and wider at high frequencies.\n",
+    "\n",
+    "Our ability to distinguish between two tones depends on whether they fall within the same or different critical bands. This frequency resolution is fundamental to how we perceive harmony, dissonance, and timbre.\n",
+    "\n",
     "\n"
    ]
   },
@@ -183,15 +186,61 @@
    "source": [
     "## Auditory illusions\n",
     "\n",
-    "    Masking effects: Simultaneous and temporal masking.\n",
-    "    Critical bands and frequency resolution.\n",
-    "    Auditory illusions: Shepard tones, missing fundamental, binaural beats.\n",
+    "Auditory illusions are fascinating because they reveal the complex ways in which our brains interpret sound, often going beyond the raw physical properties of audio signals. By studying these illusions, we gain insight into the mechanisms of human auditory perception, how we organize, prioritize, and sometimes misinterpret acoustic information. This understanding is crucial for fields like music production, audio engineering, hearing aid design, and the development of perceptually efficient audio codecs. \n",
     "\n",
-    "Activities:\n",
+    "### Masking Effects\n",
     "\n",
-    "    Listening tests: Compare sine waves, complex tones, and illusions.\n",
-    "    Small experiments: Measure threshold of hearing or masking using software (e.g., Pure Data, Audacity).\n",
-    "    Discussion: How psychoacoustics informs music production and hearing aids.\n"
+    "- **Simultaneous Masking**: When two sounds are played at the same time, a louder sound (the masker) can make a softer sound (the maskee) inaudible, even if both are within the listener's hearing range. This effect is strongest when the sounds are close in frequency. For example, in music production, a loud bass drum can mask a softer bass guitar note if they occur together and share similar frequencies. This principle is used in audio compression algorithms (like MP3), which remove masked sounds to reduce file size without noticeably affecting perceived audio quality.\n",
+    "\n",
+    "- **Frequency Masking**: Masking is most effective when the masker and maskee are close in frequency, typically within the same critical band. The human ear divides the frequency spectrum into critical bands, and sounds within the same band are more likely to mask each other. This is why a high-pitched sound is less likely to be masked by a low-pitched sound, and vice versa.\n",
+    "\n",
+    "- **Upward and Downward Spread of Masking**: Masking is generally stronger for frequencies above the masker (upward spread) than for those below. This means a loud low-frequency sound can mask higher-frequency sounds more effectively than the reverse.\n",
+    "\n",
+    "- **Temporal Masking**: A loud sound can mask a softer sound that occurs immediately before (pre-masking) or after (post-masking) it, even if the two sounds do not overlap in time. Pre-masking can last up to about 20 ms before the masker, while post-masking can persist for up to 100 ms after the masker. This demonstrates the temporal resolution limits of human hearing and is also exploited in perceptual audio coding.\n",
+    "\n",
+    "- **Real-World Examples**: \n",
+    "    - In everyday life, the sound of a passing truck can mask a conversation, making it difficult to hear speech until the truck has passed.\n",
+    "    - In music, masking can be used creatively to blend instruments or to hide imperfections in a recording.\n",
+    "    - In hearing aids, understanding masking helps in designing algorithms that enhance speech while suppressing background noise.\n",
+    "\n",
+    "- **Visualization**: The graph below illustrates how a masker tone at a certain frequency and intensity can raise the threshold of hearing for nearby frequencies, making them inaudible unless they are louder than the masking threshold. This is a key concept in psychoacoustics and audio engineering.\n",
+    "\n",
+    "\n",
+    "![Audio Masking Graph](https://upload.wikimedia.org/wikipedia/commons/e/eb/Audio_Mask_Graph.png)\n",
+    "*Image Source: [Wikipedia - Audio Masking](https://en.wikipedia.org/wiki/Masking_(audio))*\n",
+    "\n",
+    "\n",
+    "### Shepard and Risset tones\n",
+    "One of the most famous auditory illusions is named *[Shepard Tones](https://en.wikipedia.org/wiki/Shepard_tone)* after [Roger Shepard (1929–2022)](https://en.wikipedia.org/wiki/Roger_Shepard). This is a series of tones that seem to continually ascend or descend in pitch, yet never get higher or lower. This creates the auditory equivalent of a \"sonic barber pole.\"\n",
+    "\n",
+    "The Shepard tone is created by layering several sine waves that are spaced one octave apart. As the sequence progresses, all the sine waves move up (or down) in pitch simultaneously. The highest-pitched sine wave fades out as it reaches the top of the range, while a new, low-pitched sine wave fades in at the bottom. The overall amplitude envelope is shaped so that the listener always hears a similar blend of frequencies, with no clear starting or ending point. This continuous overlap and cross-fading trick the brain into perceiving a never-ending rise (or fall) in pitch, even though the actual frequencies are cycling within a fixed range. The illusion exploits the way our auditory system groups harmonically related tones and interprets pitch changes, making it difficult to pinpoint when the scale \"resets.\"\n",
+    "\n",
+    "*[Risset tones](https://en.wikipedia.org/wiki/Risset_tone)*, named after French composer and scientist [Jean-Claude Risset](https://en.wikipedia.org/wiki/Jean-Claude_Risset) (1938–2016), are often confused with Shepard tones because they are similar. However, while the Shepard tones are discrete, Risset showed that it is possible to create a similar illusion also work with continuous sounds. This type of auditory illusion is similar to Shepard tones, where a continuously ascending or descending pitch seems to rise or fall endlessly. This effect is achieved by overlapping sine waves that fade in and out at different frequencies, creating the impression of a never-ending scale. Risset tones demonstrate how our perception of pitch can be manipulated by carefully controlling the spectral content and amplitude envelopes of sounds.\n",
+    "\n",
+    "Both Shepard and Risset tones have been used in sound design and music. Here is one of many examples: \n",
+    "\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/OsBanpBQj0k?si=WvLI0whjufrvLyOX\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n",
+    "\n",
+    "\n",
+    "### Missing Fundamental\n",
+    "\n",
+    "Another powerful auditory illusion is called *missing fundamental*. When a complex tone lacks its fundamental frequency but contains its harmonics, listeners still perceive the pitch corresponding to the missing fundamental. This shows that pitch perception is based on the pattern of overtones, not just the lowest frequency present.\n",
+    "\n",
+    "For example, if you play a sound containing frequencies at 200 Hz, 300 Hz, and 400 Hz (the 2nd, 3rd, and 4th harmonics of 100 Hz), but omit the 100 Hz fundamental, most listeners will still perceive the pitch as if the 100 Hz tone were present. The auditory system analyzes the spacing between the harmonics and infers the fundamental frequency, even when it is physically absent.\n",
+    "\n",
+    "This phenomenon is important in music and audio technology. For instance, small speakers (like those in smartphones) often cannot reproduce very low frequencies, but listeners can still perceive the intended bass notes due to the presence of higher harmonics. The missing fundamental effect is also used in telephony and audio compression to create the illusion of full-range sound with limited frequency content.\n",
+    "\n",
+    "The missing fundamental illusion demonstrates that pitch perception is a constructive process, relying on the brain's ability to detect regularities and patterns in the frequency spectrum, rather than simply responding to the presence of specific frequencies.\n",
+    "\n",
+    "### Binaural Beats \n",
+    "\n",
+    "When two slightly different frequencies are played separately to each ear (using headphones), the listener perceives a rhythmic beating at the frequency difference. This illusion arises from the brain's processing of phase differences between the ears.\n",
+    "\n",
+    "### Activities\n",
+    "\n",
+    "- **Listening Tests**: Compare pure sine waves, complex tones, and auditory illusions (such as Shepard tones or binaural beats) to experience how perception differs from physical reality.\n",
+    "- **Small Experiments**: Use software like Pure Data or Audacity to measure your own threshold of hearing or to explore masking effects by adjusting the frequency and intensity of test tones.\n",
+    "- **Discussion**: Reflect on how psychoacoustic principles—such as masking and critical bands—inform the design of music production tools, audio compression algorithms (like MP3), and hearing aids. Consider how understanding auditory illusions can inspire creative sound design and improve accessibility for those with hearing impairments.\n"
    ]
   },
   {
